changes made from comments.

--- a/language-extensions/fhir-extension/pom.xml
+++ b/language-extensions/fhir-extension/pom.xml
@@ -194,6 +194,15 @@
             <groupId>dev.ikm.tinkar</groupId>
             <artifactId>entity-provider</artifactId>
         </dependency>
+        <dependency>
+            <groupId>dev.ikm.tinkar.ext.owl</groupId>
+            <artifactId>owl-extension</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>dev.ikm.tinkar</groupId>
+            <artifactId>composer</artifactId>
+        </dependency>
 
     </dependencies>
 
