changes made from comments.

--- a/language-extensions/fhir-extension/pom.xml
+++ b/language-extensions/fhir-extension/pom.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>language-extensions</artifactId>
@@ -12,7 +11,9 @@
     <groupId>dev.ikm.tinkar.fhir</groupId>
     <artifactId>fhir-extension</artifactId>
     <packaging>jar</packaging>
+
     <name>TINKAR FHIR Extension</name>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <asm.version>9.1</asm.version>
@@ -130,7 +131,6 @@
         </dependencies>
 
     </dependencyManagement>
-
     <dependencies>
         <dependency>
             <groupId>dev.ikm.jpms</groupId>
