--- a/aggregator/pom.xml
+++ b/aggregator/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -8,8 +9,9 @@
     </parent>
 
     <artifactId>aggregator</artifactId>
-    <name>code coverage and documentation aggregator</name>
     <packaging>pom</packaging>
+
+    <name>code coverage and documentation aggregator</name>
 
     <dependencies>
         <dependency>
@@ -130,6 +132,4 @@
             </plugin>
         </plugins>
     </reporting>
-
 </project>
-
