--- a/language-extensions/owl-extension/pom.xml
+++ b/language-extensions/owl-extension/pom.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>language-extensions</artifactId>
@@ -12,7 +11,9 @@
     <groupId>dev.ikm.tinkar.ext.owl</groupId>
     <artifactId>owl-extension</artifactId>
     <packaging>jar</packaging>
+
     <name>TINKAR Language Extension - OWL</name>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -37,6 +38,7 @@
             <artifactId>common</artifactId>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -45,5 +47,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
