--- a/provider/data-spinedarray-provider/pom.xml
+++ b/provider/data-spinedarray-provider/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -11,6 +10,7 @@
 
     <artifactId>data-spinedarray-provider</artifactId>
     <packaging>jar</packaging>
+
     <name>TINKAR Provider Data - Spined array</name>
 
     <dependencies>
@@ -41,6 +41,7 @@
             <artifactId>eclipse-collections</artifactId>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
