--- a/language-extensions/fhir-extension/pom.xml
+++ b/language-extensions/fhir-extension/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>language-extensions</artifactId>
-        <version>1.68.0-SNAPSHOT</version>
+        <version>1.68.0</version>
     </parent>
 
     <groupId>dev.ikm.tinkar.fhir</groupId>
