--- a/language-extensions/fhir-extension/pom.xml
+++ b/language-extensions/fhir-extension/pom.xml
@@ -18,15 +18,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <asm.version>9.1</asm.version>
         <jsonschema2pojo-core.version>1.2.1</jsonschema2pojo-core.version>
-        <commons-lang3.version>3.14.0</commons-lang3.version>
-        <commons-text.version>1.12.0</commons-text.version>
-        <commons-io.version>2.16.1</commons-io.version>
-        <fhir-base.version>7.0.2-r8</fhir-base.version>
-        <fhir-structures.version>7.0.2-r5</fhir-structures.version>
-        <fhir-hl7-r4.version>6.3.3-r6</fhir-hl7-r4.version>
-        <fhir-hl7-utilities.version>6.3.3-r5</fhir-hl7-utilities.version>
+        <commons-lang3.version>3.17.0-r4</commons-lang3.version>
+        <commons-text.version>1.12.0-r4</commons-text.version>
+        <commons-io.version>2.16.1-r4</commons-io.version>
+        <fhir-base.version>7.0.2-r9</fhir-base.version>
+        <fhir-structures.version>7.0.2-r8</fhir-structures.version>
+        <fhir-hl7-r4.version>6.3.3-r9</fhir-hl7-r4.version>
+        <fhir-hl7-utilities.version>6.3.3-r8</fhir-hl7-utilities.version>
         <fasterxml-jackson-core.version>2.17.0</fasterxml-jackson-core.version>
-        <guava.version>33.1.0-jre-r1</guava.version>
+        <guava.version>33.3.0-jre-r1</guava.version>
     </properties>
 
     <dependencyManagement>
@@ -38,17 +38,17 @@
             </dependency>
 
             <dependency>
-                <groupId>org.apache.commons</groupId>
+                <groupId>dev.ikm.jpms</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3.version}</version>
             </dependency>
             <dependency>
-                <groupId>commons-io</groupId>
+                <groupId>dev.ikm.jpms</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${commons-io.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.apache.commons</groupId>
+                <groupId>dev.ikm.jpms</groupId>
                 <artifactId>commons-text</artifactId>
                 <version>${commons-text.version}</version>
             </dependency>
@@ -128,16 +128,16 @@
             <artifactId>common</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>dev.ikm.jpms</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
         <dependency>
-            <groupId>commons-io</groupId>
+            <groupId>dev.ikm.jpms</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>dev.ikm.jpms</groupId>
             <artifactId>commons-text</artifactId>
         </dependency>
 
