--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,8 +26,8 @@ jobs:
           branch_name: ${{env.BRANCH_NAME}}
           sonarcloud_token: ${{ secrets.SONAR_TOKEN }}
           sonarcloud_host_url: ${{ 'https://sonarcloud.io/' }}
-          sonarcloud_organization: ${{ github.repository_owner }}
+          sonarcloud_organization: ${{ 'casaras1' }}
           sonarcloud_sources: ${{ 'src/main/java' }}
-          sonarcloud_projectKey: ${{ github.repository_owner }}_${{ github.event.repository.name }}
+          sonarcloud_projectKey: ${{ 'casaras1_tinkar-core' }}
           sonarcloud_coverage_jacoco_xmlReportPaths: ${{ 'target/site/jacoco/jacoco.xml' }}
           sonarcloud_java_binaries: ${{ 'target/classes' }}
