--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,8 +27,8 @@ jobs:
           sonarcloud_token: ${{ secrets.SONAR_TOKEN }}
           sonarcloud_host_url: ${{ 'https://sonarcloud.io/' }}
           sonarcloud_organization: ${{ 'casaras1' }}
-          sonarcloud_sources: ${{ 'src/main/java' }}
+          #sonarcloud_sources: ${{ 'src/main/java' }}
           sonarcloud_projectKey: ${{ 'casaras1_tinkar-core' }}
           sonarcloud_coverage_jacoco_xmlReportPaths: ${{ 'target/site/jacoco/jacoco.xml' }}
           sonarcloud_java_binaries: ${{ 'target/classes' }}
-          sonarcloud_tests: ${{ 'src' }}  
+          #sonarcloud_tests: ${{ 'src' }}  
