--- a/reasoner/reasoner-elk-owl/pom.xml
+++ b/reasoner/reasoner-elk-owl/pom.xml
@@ -62,10 +62,10 @@
 							<skip>${skipITs}</skip>
 							<artifactItems>
 								<artifactItem>
-									<groupId>${project.groupId}</groupId>
+									<groupId>${reasoner-test-data.groupid}</groupId>
 									<artifactId>
 										reasoner-test-data-snomed-us-20230901</artifactId>
-									<version>2024.05.02</version>
+									<version>2024.08.30</version>
 									<type>zip</type>
 								</artifactItem>
 								<artifactItem>
@@ -75,30 +75,12 @@
 									<version>${snomed-test-data.version}</version>
 									<type>zip</type>
 								</artifactItem>
-								<artifactItem>
-									<groupId>${project.groupId}</groupId>
-									<artifactId>
-										reasoner-test-data-snomed-us-20200901</artifactId>
-									<version>2024.05.02</version>
-									<type>zip</type>
-								</artifactItem>
 							</artifactItems>
 							<outputDirectory>
 								${project.build.directory}/db</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-site-plugin</artifactId>
-				<configuration>
-					<locales>en</locales>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
