--- a/reasoner/pom.xml
+++ b/reasoner/pom.xml
@@ -16,12 +16,13 @@
 	<modules>
 		<module>reasoner-elk-owl</module>
 		<module>reasoner-elk-snomed</module>
+<!--		<module>reasoner-hybrid</module>-->
 		<module>reasoner-service</module>
 	</modules>
 
 	<properties>
 		<maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
-		<ikm-reasoner.version>0.29.0-SNAPSHOT</ikm-reasoner.version>
+		<ikm-reasoner.version>0.29.0</ikm-reasoner.version>
 		<owlapi.version>4.7.1</owlapi.version>
 		<skipITs>true</skipITs>
 		<reasoner-test-data.groupid>dev.ikm.reasoner-test-data</reasoner-test-data.groupid>
