--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>dev.ikm.tinkar</groupId>
     <artifactId>tinkar-core</artifactId>
-    <version>1.70.0-SNAPSHOT</version>
+    <version>1.70.0</version>
     <packaging>pom</packaging>
 
     <name>IKM tinkar core</name>
