Initial implementation of hybrid reasoner service

--- a/reasoner/pom.xml
+++ b/reasoner/pom.xml
@@ -16,7 +16,7 @@
 	<modules>
 		<module>reasoner-elk-owl</module>
 		<module>reasoner-elk-snomed</module>
-<!--		<module>reasoner-hybrid</module>-->
+		<module>reasoner-hybrid</module>
 		<module>reasoner-service</module>
 	</modules>
 
