--- a/reasoner/pom.xml
+++ b/reasoner/pom.xml
@@ -22,7 +22,7 @@
 
 	<properties>
 		<maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
-		<ikm-reasoner.version>0.29.0</ikm-reasoner.version>
+		<ikm-reasoner.version>0.30.0-SNAPSHOT</ikm-reasoner.version>
 		<owlapi.version>4.7.1</owlapi.version>
 		<skipITs>true</skipITs>
 		<reasoner-test-data.groupid>dev.ikm.reasoner-test-data</reasoner-test-data.groupid>
