--- a/reasoner/reasoner-hybrid/pom.xml
+++ b/reasoner/reasoner-hybrid/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>dev.ikm.tinkar</groupId>
 		<artifactId>reasoner</artifactId>
-		<version>1.70.0-SNAPSHOT</version>
+		<version>1.71.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>reasoner-hybrid</artifactId>
@@ -51,4 +51,43 @@
 			<version>1.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>unpack-test-data</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<skip>${skipITs}</skip>
+							<artifactItems>
+								<artifactItem>
+									<groupId>${reasoner-test-data.groupid}</groupId>
+									<artifactId>
+										reasoner-test-data-snomed-us-20230901</artifactId>
+									<version>2024.09.20</version>
+									<type>zip</type>
+								</artifactItem>
+<!--								<artifactItem>-->
+<!--									<groupId>${snomed-test-data.groupid}</groupId>-->
+<!--									<artifactId>-->
+<!--										snomed-test-data-intl-20240201</artifactId>-->
+<!--									<version>${snomed-test-data.version}</version>-->
+<!--									<type>zip</type>-->
+<!--								</artifactItem>-->
+							</artifactItems>
+							<outputDirectory>
+								${project.build.directory}/db</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
