updating tinkar core to reflect jpms module changes related to module renaming

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -20,6 +20,11 @@
     <dependencies>
         <dependency>
             <groupId>${tinkar-jpms-deps.groupId}</groupId>
+            <artifactId>auto-service</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>${tinkar-jpms-deps.groupId}</groupId>
             <artifactId>roaringbitmap</artifactId>
         </dependency>
         <dependency>
