--- a/provider/data-websocket-server-provider/pom.xml
+++ b/provider/data-websocket-server-provider/pom.xml
@@ -43,6 +43,12 @@
         <dependency>
             <groupId>io.activej</groupId>
             <artifactId>activej-launchers-http</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.activej</groupId>
+                    <artifactId>activej-bytebuf</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
