--- a/reasoner/reasoner-elk-owl/pom.xml
+++ b/reasoner/reasoner-elk-owl/pom.xml
@@ -64,15 +64,22 @@
 								<artifactItem>
 									<groupId>${reasoner-test-data.groupid}</groupId>
 									<artifactId>
-										reasoner-test-data-snomed-us-20230901</artifactId>
-									<version>2024.08.30</version>
+										tinkar-test-data-snomed-us-20230901</artifactId>
+									<version>2024.09.20</version>
 									<type>zip</type>
 								</artifactItem>
 								<artifactItem>
 									<groupId>${snomed-test-data.groupid}</groupId>
 									<artifactId>
-										snomed-test-data-intl-20240201</artifactId>
+										snomed-test-data-us-20230901</artifactId>
 									<version>${snomed-test-data.version}</version>
+									<type>zip</type>
+								</artifactItem>
+								<artifactItem>
+									<groupId>${project.groupId}</groupId>
+									<artifactId>
+										reasoner-test-data-snomed-us-20200901</artifactId>
+									<version>2024.05.02</version>
 									<type>zip</type>
 								</artifactItem>
 							</artifactItems>
