Bugfix/fix apache commons and guava artifacts (#43)
* Update Apache Commons, Guava and all fhir based module versions and correct related `groupId`

* Remove redundant dependencies already included in `hapi-fhir-base`

* merging with upstream

* updating tinkar core to reflect jpms module changes related to module renaming

* fixing merge problems with pom files

* updating to latest release of eclipse plugin, which seems to be different

* updates to use latest jpms libs

---------

Co-authored-by: Indrit Beqiri <ib@sandec.de>

--- a/language-extensions/pom.xml
+++ b/language-extensions/pom.xml
@@ -11,6 +11,8 @@
     <artifactId>language-extensions</artifactId>
     <packaging>pom</packaging>
 
+    <name>TINKAR Language Extensions</name>
+
     <modules>
         <module>owl-extension</module>
         <module>fhir-extension</module>
