--- a/reasoner/pom.xml
+++ b/reasoner/pom.xml
@@ -16,7 +16,6 @@
 	<modules>
 		<module>reasoner-elk-owl</module>
 		<module>reasoner-elk-snomed</module>
-<!--		<module>reasoner-hybrid</module>-->
 		<module>reasoner-service</module>
 	</modules>
 
@@ -69,6 +68,13 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j2-impl</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<pluginManagement>
