--- a/reasoner/reasoner-elk-owl/pom.xml
+++ b/reasoner/reasoner-elk-owl/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>dev.ikm.tinkar</groupId>
 		<artifactId>reasoner</artifactId>
-		<version>1.72.0</version>
+		<version>1.73.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>reasoner-elk-owl</artifactId>
