--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -35,12 +35,27 @@
                 <artifactId>binding-extension</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>dev.ikm.tinkar</groupId>
+                <artifactId>composer</artifactId>
+                <version>1.4.0</version>
+            </dependency>
+            <dependency>
+                <groupId>dev.ikm.jpms</groupId>
+                <artifactId>eclipse-collections-api</artifactId>
+                <version>11.1.0-r4</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>coordinate</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>composer</artifactId>
+
         </dependency>
 
         <dependency>
@@ -71,6 +86,10 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>search-provider</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>dev.ikm.jpms</groupId>
+            <artifactId>eclipse-collections-api</artifactId>
         </dependency>
 
         <dependency>
