--- a/reasoner/pom.xml
+++ b/reasoner/pom.xml
@@ -16,17 +16,21 @@
 	<modules>
 		<module>reasoner-elk-owl</module>
 		<module>reasoner-elk-snomed</module>
+		<module>reasoner-hybrid</module>
 		<module>reasoner-service</module>
 	</modules>
 
 	<properties>
-		<maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
-		<ikm-reasoner.version>0.31.0</ikm-reasoner.version>
-		<owlapi.version>4.7.1</owlapi.version>
-		<skipITs>true</skipITs>
+		<hybrid-reasoner.version>1.0.3</hybrid-reasoner.version>
+		<ikm-reasoner.version>0.32.0</ikm-reasoner.version>
+		<owlapi.version>4.7.5</owlapi.version>
 		<reasoner-test-data.groupid>dev.ikm.reasoner-test-data</reasoner-test-data.groupid>
+		<skipITs>true</skipITs>
 		<snomed-test-data.groupid>dev.ikm.snomed</snomed-test-data.groupid>
 		<snomed-test-data.version>0.1.0</snomed-test-data.version>
+		<!-- other plugins -->
+		<tidy-maven-plugin.version>1.3.0</tidy-maven-plugin.version>
+		<versions-maven-plugin.version>2.15.0</versions-maven-plugin.version>
 	</properties>
 
 	<dependencyManagement>
@@ -42,13 +46,13 @@
 				<version>${ikm-reasoner.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>dev.ikm.owlapi</groupId>
-				<artifactId>owlapi-api</artifactId>
-				<version>${owlapi.version}</version>
+				<groupId>dev.ikm.hybrid-reasoner</groupId>
+				<artifactId>hybrid-reasoner-snomed</artifactId>
+				<version>${hybrid-reasoner.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>dev.ikm.owlapi</groupId>
-				<artifactId>owlapi-impl</artifactId>
+				<artifactId>owlapi-api</artifactId>
 				<version>${owlapi.version}</version>
 			</dependency>
 			<dependency>
@@ -58,8 +62,18 @@
 			</dependency>
 			<dependency>
 				<groupId>dev.ikm.owlapi</groupId>
+				<artifactId>owlapi-impl</artifactId>
+				<version>${owlapi.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>dev.ikm.owlapi</groupId>
 				<artifactId>owlapi-parsers</artifactId>
 				<version>${owlapi.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>reasoner-elk-snomed</artifactId>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>dev.ikm.tinkar</groupId>
@@ -84,14 +98,43 @@
 					<artifactId>maven-assembly-plugin</artifactId>
 					<version>${maven-assembly-plugin.version}</version>
 				</plugin>
+				<!-- other plugins -->
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>tidy-maven-plugin</artifactId>
-					<version>1.2.0</version>
+					<version>${tidy-maven-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>versions-maven-plugin</artifactId>
+					<version>${versions-maven-plugin.version}</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
+		<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>enforce-maven</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<requireMavenVersion>
+									<version>3.8</version>
+								</requireMavenVersion>
+								<requireJavaVersion>
+									<version>${java.version}</version>
+								</requireJavaVersion>
+							</rules>
+							<fail>true</fail>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>tidy-maven-plugin</artifactId>
@@ -102,6 +145,30 @@
 						<goals>
 							<goal>check</goal>
 						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>analyze</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>display-dependency-updates</goal>
+							<goal>display-plugin-updates</goal>
+						</goals>
+						<configuration>
+							<ruleSet>
+								<ignoreVersions>
+									<ignoreVersion>
+										<type>regex</type>
+										<version>.+(alpha|beta).*</version>
+									</ignoreVersion>
+								</ignoreVersions>
+							</ruleSet>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
