--- a/reasoner/reasoner-hybrid/pom.xml
+++ b/reasoner/reasoner-hybrid/pom.xml
@@ -8,7 +8,7 @@
 		<version>1.73.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>reasoner-elk-owl</artifactId>
+	<artifactId>reasoner-hybrid</artifactId>
 
 	<dependencies>
 		<dependency>
@@ -34,6 +34,10 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>reasoner-elk-snomed</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>reasoner-service</artifactId>
 		</dependency>
 		<dependency>
@@ -41,8 +45,8 @@
 			<artifactId>elk-snomed</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>dev.ikm.elk</groupId>
-			<artifactId>elk-snomed-owl</artifactId>
+			<groupId>dev.ikm.hybrid-reasoner</groupId>
+			<artifactId>hybrid-reasoner-snomed</artifactId>
 		</dependency>
 	</dependencies>
 
@@ -69,17 +73,10 @@
 									<type>zip</type>
 								</artifactItem>
 								<artifactItem>
-									<groupId>${snomed-test-data.groupid}</groupId>
+									<groupId>${reasoner-test-data.groupid}</groupId>
 									<artifactId>
-										snomed-test-data-us-20230901</artifactId>
-									<version>${snomed-test-data.version}</version>
-									<type>zip</type>
-								</artifactItem>
-								<artifactItem>
-									<groupId>${project.groupId}</groupId>
-									<artifactId>
-										reasoner-test-data-snomed-us-20200901</artifactId>
-									<version>2024.05.02</version>
+										tinkar-test-data-snomed-us-20230901-nfh</artifactId>
+									<version>2024.09.20</version>
 									<type>zip</type>
 								</artifactItem>
 							</artifactItems>
